[gd_scene load_steps=9 format=3 uid="uid://bsoithy5lg7is"]

[ext_resource type="Script" path="res://Scripts/MainMenu.gd" id="1_0bdrc"]
[ext_resource type="VideoStream" path="res://output.ogv" id="2_crwrw"]
[ext_resource type="Texture2D" uid="uid://ce47a7mikq46j" path="res://MainMenuButtons/Continue.png" id="3_1ps3f"]
[ext_resource type="Texture2D" uid="uid://cs312hkdfnu1m" path="res://MainMenuButtons/NewGame.png" id="4_k0rbs"]
[ext_resource type="Texture2D" uid="uid://dkmmuwk8sxfoc" path="res://MainMenuButtons/Options.png" id="5_5v4vt"]
[ext_resource type="Texture2D" uid="uid://c6ajqmcd2va28" path="res://MainMenuButtons/Gallery.png" id="6_6x28t"]
[ext_resource type="Texture2D" uid="uid://cbwq5k1y3y8mp" path="res://MainMenuButtons/Credits.png" id="7_x2h1r"]
[ext_resource type="Texture2D" uid="uid://5qj1ebek6oke" path="res://MainMenuButtons/text-1704400544344.png" id="8_go4iy"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_0bdrc")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
z_index = -5
offset_right = 1920.0
offset_bottom = 1088.0
stream = ExtResource("2_crwrw")
autoplay = true
loop = true
buffering_msec = 10

[node name="Continue" type="Button" parent="."]
offset_left = 1540.0
offset_top = 520.0
offset_right = 2024.0
offset_bottom = 609.0
scale = Vector2(0.7, 0.7)
icon = ExtResource("3_1ps3f")
flat = true

[node name="NewGame" type="Button" parent="."]
offset_left = 1515.0
offset_top = 355.0
offset_right = 1963.0
offset_bottom = 444.0
scale = Vector2(0.88, 0.88)
icon = ExtResource("4_k0rbs")
flat = true

[node name="Options" type="Button" parent="."]
offset_left = 45.0
offset_top = 500.0
offset_right = 349.0
offset_bottom = 589.0
icon = ExtResource("5_5v4vt")
flat = true

[node name="Gallery" type="Button" parent="."]
offset_left = 95.0
offset_top = 660.0
offset_right = 409.0
offset_bottom = 749.0
icon = ExtResource("6_6x28t")
flat = true

[node name="Credits" type="Button" parent="."]
offset_left = 75.0
offset_top = 340.0
offset_right = 480.0
offset_bottom = 429.0
scale = Vector2(0.8, 0.8)
icon = ExtResource("7_x2h1r")
flat = true

[node name="Quit" type="Button" parent="."]
offset_left = 1515.0
offset_top = 670.0
offset_right = 1701.0
offset_bottom = 772.0
scale = Vector2(0.8, 0.8)
icon = ExtResource("8_go4iy")
flat = true

[connection signal="pressed" from="NewGame" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Options" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_button_pressed"]
